gap problem resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 * {
-  margin: 0;
+  margin: 70;
   padding: 0;
 }
 
+.App{
+  width:100%;
+  margin-left:-33px;
+}
 
 body {
   background: blanchedalmond;
