--- a/src/components/Pages/Ielts.css
+++ b/src/components/Pages/Ielts.css
@@ -7,27 +7,10 @@
     margin-left: 80px;
 }
 
-/* .element0 {
-    text-align: center;
-    border-radius: 25px;
-    font-size: 18px;
-    border: 2px solid #e7ecec;
-    padding-top: 20px;
-    padding-right: 30px;
-    padding-left: 50px;
-    width: 1062px;
-    height: 75px;
-    justify-content: center;
-    background: linear-gradient(to right, #33ccff 0%, #ff99cc 100%);
-    text-shadow: 2px 2px 5px rgb(197, 114, 230);
-} */
-
 .elem0ielts {
     text-align: center;
-    margin-left: 430px;
-    margin-right: 300px;
-    margin-top: 50px;
-    margin-bottom: 0px;
+    margin-left: 410px;
+    
 }
 
 .element1a {
