--- a/src/components/Pages/Internship.css
+++ b/src/components/Pages/Internship.css
@@ -11,7 +11,7 @@
     border-bottom: solid rgba(0, 0, 0, 0.822);
 }
 .internship{
-    margin-top: 80px;
+    margin-top: 55px;
 }
 
 .para {
